package safari.safariObjects;

/**
 * Interface declares what actions living organisms should be able to make
 */
public interface IActionable {
    /**
     * Makes living organism to do some action
     */
    void makeAction();
}
