package safari.safariObjects.human;

/**
 * Interface declares Human's required methods
 */
public interface IHuman {
    /**
     * Tries to shoot the Lion on found Position, Position
     */
    void shoot();
    /**
     * Formats information abut Human object to the string
     * @return String with information about Human object
     */
    String toString();
}
